# voice-ai-agent

./: .fastapicloudignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: data.py  llm.py  main.py  prompt.py  tools.py
