[project]
name = "voice-ai-agent"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]==0.30.6",
    "websockets==13.1",
    "openai==1.57.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.fastapi.deploy]
start_command = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"